--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 .idea/
-<<<<<<< HEAD
 __pycache__/
 .pytest_cache/
 .ipynb_checkpoints/
-=======
-.ipynb_checkpoints/
-
+*.ipynb
 data/cologne_000057_000019_leftImg8bit.png
 data/kernal.png
->>>>>>> 0be6cdc8d54a54cd1cca7aeb47e8e723fb165dd5
