--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-.idea/
+.gitignore
 __pycache__/
-.pytest_cache/
+debug.log
+Untitled.ipynb
+.idea/
+blur.ipynb
+grades.xlsx
+test.py
+Untitled_first.ipynb
 .ipynb_checkpoints/
-*.ipynb
+data/
+kernal.png
+test_conv.py
+Untitled1.ipynb
+
+
